# Brito-thesis-Robotis-Manipulator-H-path-planning

./: CHANGELOG.rst  README.md
Vine_tree.SLDPRT/: manifest.xml
Vine_tree.SLDPRT/urdf/: Vine_tree.SLDPRT.urdf
build-manipulator_h_path_planning-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  manipulator_h_path_planning.cbp
build-manipulator_h_path_planning-Desktop-Default/catkin_generated/: generate_cached_setup.py  ordered_paths.cmake  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-manipulator_h_path_planning-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-manipulator_h_path_planning-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gmock.cbp  gtest.cbp
cat_manipulator_control/: CMakeLists.txt
cutting_tool/: manifest.xml
cutting_tool/meshes/: cutting_tool.STL
cutting_tool/urdf/: cutting_tool.urdf
gazebo_objects/: box.urdf  object.urdf
husky_manipulator_h_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_manipulator_h_moveit_config/config/: controllers.yaml  husky.srdf  kinematics.yaml  ompl_planning.yaml  sensors_Hokuyo_UST_10LX_pointcloud2.yaml
husky_manipulator_h_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  husky_manipulator_h_planning_execution.launch  husky_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
laser_to_pcl/: CMakeLists.txt  package.xml
laser_to_pcl/src/: laser_to_pcl_node.cpp
manipulator_h_description/urdf/: manipulator_h.gazebo  manipulator_h.xacro
manipulator_h_gazebo/config/: position_controller.yaml
manipulator_h_gazebo/launch/: manipulator_h_gazebo.launch  position_controller.launch
manipulator_h_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
manipulator_h_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  robotis_manipulator_h.srdf
manipulator_h_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kinematic_model_tutorial.launch  manipulator_h_planning_execution.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robotis_manipulator_h_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
manipulator_h_path_planning/: CMakeLists.txt  package.xml
manipulator_h_path_planning/launch/: fake_vine_tree_tests.launch  husky_manipulator_h_move_group_interface_tutorial.launch  laser_tests.launch  manipulator_h_collision_contact_tutorial.launch  manipulator_h_kinematic_model_tutorial.launch  manipulator_h_motion_planning_api_tutorial.launch  manipulator_h_move_group_interface_tutorial.launch  manipulator_h_planning_pipeline_tutorial.launch  manipulator_h_planning_scene_ros_api_tutorial.launch  manipulator_h_planning_scene_tutorial.launch  oak_tree_tests.launch  real_manipulator_h_alone_tests.launch
manipulator_h_path_planning/src/: fake_vine_tree_tests.cpp  husky_manipulator_h_move_group_interface_tutorial.cpp  laser_tests.cpp  manipulator_h_kinematic_model_tutorial.cpp  manipulator_h_motion_planning_api_tutorial.cpp  manipulator_h_move_group_interface_tutorial.cpp  manipulator_h_planning_pipeline_tutorial.cpp  manipulator_h_planning_scene_ros_api_tutorial.cpp  manipulator_h_planning_scene_tutorial.cpp  oak_tree_tests.cpp  real_manipulator_h_alone_tests.cpp
robotis_controller/launch/: ANTIGO.launch  robot_init.launch
(+36 files in other folders)
